--- a/restspringboot/src/main/resources/application.properties
+++ b/restspringboot/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/test?useTimeZone=true&serverTimezone=UTC&useSSL=false
+spring.datasource.url=jdbc:mysql://db:3306/test?useTimeZone=true&serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=admin
 
@@ -7,7 +7,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = false
 #
-flyway.url=jdbc:mysql://localhost:3306/
+flyway.url=jdbc:mysql://db:3306/
 flyway.schemas=test
 flyway.user=root
 flyway.pass=admin
